// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKFxyN htYHAK"
    role="button"
  >
    <button
      class="sc-gtsrHT sc-dlnjwi buBIgT bSPiRp sc-gKAaRy etvEdw"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-fujyAs dJGnWL"
      />
      <div
        class="sc-iCoGMd cnvXVm"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqGGPW htgKGY"
  >
    <div
      class="sc-dIsUp huqjpX"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pNWdM Jszfe"
      >
        <hr
          class="sc-crzoAE ZkomU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crzoAE ZkomU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKFxyN htYHAK"
    role="button"
  >
    <button
      class="sc-gtsrHT sc-dlnjwi buBIgT ipgAki sc-gKAaRy etvEdw"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-fujyAs dJGnWL"
      />
      <div
        class="sc-iCoGMd cnvXVm"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqGGPW hXbvLc"
  >
    <div
      class="sc-ksluID drbIcx sc-hBMUJo hLgjCY fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-dIsUp huqjpX"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pNWdM Jszfe"
      >
        <hr
          class="sc-crzoAE ZkomU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crzoAE ZkomU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKFxyN htYHAK"
    role="button"
  >
    <button
      class="sc-gtsrHT sc-dlnjwi buBIgT jYgJMS sc-eCApnc iAJkPw"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gtsrHT sc-dlnjwi buBIgT jYgJMS sc-jSFjdj jgFVl"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iCoGMd cnvXVm"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqGGPW htgKGY"
  >
    <div
      class="sc-dIsUp huqjpX"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pNWdM Jszfe"
      >
        <hr
          class="sc-crzoAE ZkomU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crzoAE ZkomU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKFxyN htYHAK"
    role="button"
  >
    <button
      class="sc-gtsrHT sc-dlnjwi buBIgT hEtbzl sc-eCApnc iAJkPw"
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gtsrHT sc-dlnjwi buBIgT hEtbzl sc-jSFjdj jgFVl"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iCoGMd cnvXVm"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqGGPW hXbvLc"
  >
    <div
      class="sc-ksluID drbIcx sc-hBMUJo hLgjCY fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-dIsUp huqjpX"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pNWdM Jszfe"
      >
        <hr
          class="sc-crzoAE ZkomU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crzoAE ZkomU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqAclL efBLjr"
        >
          <p
            class="sc-bdnxRM VaXn sc-kEqXSa"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
